# Microservices-based-Chat-System

./: CMakeLists.txt
ChatServerMock/: CMakeLists.txt  main.cpp  resource.qrc  server.cpp  server.h  widget.cpp
ChatServerMock/core/include/: server.h  widget.h
ChatServerMock/core/src/: mainwindow.cpp  server.cpp  widget.cpp
ChatServerMock/resource/file/: speech.pcm  test.txt
client/: CMakeLists.txt  addfrienddialog.cpp  addfrienddialog.h  choosefrienddialog.cpp  choosefrienddialog.h  debug.hpp  groupsessiondetailwidget.cpp  groupsessiondetailwidget.h  historymessagewidget.cpp  historymessagewidget.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  messageeditarea.cpp  messageeditarea.h  messageshowarea.cpp  messageshowarea.h  phoneloginwidget.cpp  phoneloginwidget.h  resource.qrc  selfinfowidget.cpp  selfinfowidget.h  sessiondetailwidget.cpp  sessiondetailwidget.h  sessionfriendarea.cpp  sessionfriendarea.h  soundrecorder.cpp  soundrecorder.h  toast.cpp  userinfowidget.cpp  userinfowidget.h  verifycodewidget.cpp
client/core/include/: add_friend_dialog.h  choose_friend_dialog.h  debug.h  group_session_detail_widget.h  history_message_widget.h  login_widget.h  mainwidget.h  message_edit_area.h  message_show_area.h  phone_login_widget.h  session_detail_widget.h  session_friend_area.h  toast.h  userinfo_widget.h  verifycode_widget.h
client/core/src/: add_friend_dialog.cpp  choose_friend_dialog.cpp  group_session_detail_widget.cpp  history_message_widget.cpp  login_widget.cpp  mainwidget.cpp  message_edit_area.cpp  message_show_area.cpp  phone_login_widget.cpp  selfinfo_widget.cpp  session_detail_widget.cpp  session_friend_area.cpp  sound_recorder.cpp  toast.cpp  userinfo_widget.cpp  verifycode_widget.cpp
client/model/: data.hpp  datacenter.cpp  datacenter.h
client/network/: netclient.cpp  netclient.h
client/proto/: base.proto  speech.proto  user.proto
common/: channel.hpp  data_es.hpp  dms.hpp  etcd.hpp  member_relation.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_user.hpp  rabbitmq.hpp  redis.hpp  utils.hpp
file/: CMakeLists.txt
friend/: CMakeLists.txt
gateway/: CMakeLists.txt
odb/: message.hpp  (+5 more)
server/: CMakeLists.txt  clean.sh  depends.sh  docker-compose.yml
server/Examples/Demos/docker/v1/: dockerfile
server/Examples/Demos/docker/v2/: dockerfile  main  main.cc
server/Examples/Demos/gflags/: main.cc
server/Examples/Demos/gtest/: makefile
server/Examples/Demos/jsoncpp/: makefile
server/Examples/Demos/odb/eg./: CMakeLists.txt
server/Examples/Demos/spdlog/: sync_stdout.cc
server/Examples/Pre_Code/brpc/: makefile
server/Examples/Pre_Code/etcd/: makefile
server/Examples/Pre_Code/rabbitmq/: consume.cc
server/common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  elasticsearch.hpp  es.hpp  etcd.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  redis.hpp  utils.hpp
server/conf/: file_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  transmite_server.conf  user_server.conf
server/core/file/: CMakeLists.txt
server/core/file/source/: file_server.cc  file_server.hpp
server/core/friend/: CMakeLists.txt  dockerfile
server/core/friend/source/: friend_server.cc  friend_server.hpp
server/core/gateway/: CMakeLists.txt
server/core/gateway/source/: connections.hpp  gateway_server.cc  gateway_server.hpp
server/core/message/: CMakeLists.txt  dockerfile
server/core/message/source/: message_server.hpp
server/core/message/test/mysql/: makefile  message-odb.cxx  message-odb.hxx
server/core/message/test/test/: message.client.cc
server/core/speech/: CMakeLists.txt  dockerfile
server/core/speech/source/: speech_server.cc  speech_server.hpp
server/core/speech/test/: speech_client.cc
server/core/transmite/: CMakeLists.txt  dockerfile
server/core/transmite/source/: transmite_server.hpp
server/core/user/: CMakeLists.txt
server/core/user/source/: user_server.cc  user_server.hpp
server/core/user/test/es/: makefile
server/core/user/test/test/: user_client.cc
server/examples/Demos/DMS/: makefile
server/examples/Demos/brpc/: client_sync.cc  server.cc
server/examples/Demos/docker-compose/: docker-compose.yml
server/examples/Demos/docker/v2/: main  main.cc
server/examples/Demos/etcd/: put.cc
server/examples/Demos/odb/eg/source/: main.cc
server/examples/Demos/rabiitmq/: consume.cc
server/examples/Pre_Code/ASR/: main.cc  makefile
server/examples/Pre_Code/brpc/: channel.hpp  registry.cc
server/examples/Pre_Code/es/: makefile
server/examples/Pre_Code/etcd/: etcd.hpp
server/examples/Pre_Code/rabbitmq/: makefile
server/examples/Pre_Code/spdlog/: logger.hpp  makefile
server/file/: dockerfile
server/friend/: CMakeLists.txt  dockerfile
server/friend/test/mysql/: makefile
server/friend/test/test/: friend_client.cc
server/gateway/: dockerfile
server/message/: CMakeLists.txt  dockerfile
server/message/source/: message_server.cc  message_server.hpp
server/message/test/es/: makefile
server/odb/: chat_session.hpp
server/proto/: notify.proto
server/scripts/: clean.sh  clean_docker.sh  depends.sh  entrypoint.sh
server/scripts/test/: service_status.sh
server/speech/: CMakeLists.txt  dockerfile
server/speech/source/: speech_server.cc  speech_server.hpp
server/sql/: chat_session.sql  friend_apply.sql  relation.sql
server/src/odb/: chat_session.hpp  friend_apply.hpp  relation.hpp
server/src/proto/: base.proto  file.proto  friend.proto  transmite.proto
server/src/sql/: chat_session_member.sql  message.sql  relation.sql  user.sql
server/transmite/: CMakeLists.txt  dockerfile
server/transmite/source/: transmite_server.cc
server/transmite/test/mysql/: makefile
server/transmite/test/test/: user_client.cc
server/user/: CMakeLists.txt  dockerfile
server/user/test/es/: main.cc
server/user/test/mysql/: main.cc  user-odb.ixx
(+122 files in other folders)
